--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-native": "0.73.4",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.6"
   },
