--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
