--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@types/react-native-snap-carousel": "^3.8.11",
     "expo": "~50.0.8",
     "expo-linear-gradient": "~12.7.2",
@@ -20,9 +20,11 @@
     "react-dropdown": "^1.11.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.6",
-    "react-native-maps": "1.10.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
