--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "axios": "^1.7.7",
     "expo": "~50.0.8",
+    "expo-device": "~5.9.4",
     "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-maps": "1.10.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.6",
-    "react-native-maps": "1.10.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
