--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.6"
   },
