Correção de conteudo no gráfico (a ser continuado)

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "^0.19.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-svg-charts": "^5.0.16"
   },
   "private": true
 }
