--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-native": "0.73.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "14.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "^0.19.12"
   },
